files/ingress_rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - microservice.tijaniahmed.me
    secretName: acme-crt-secret
  rules:
  - host: example.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end
            namespace: 
            port:
              number: 80
